# torch_mlu

./: .clang-format  .gitignore  .lintrunner.toml  .yamllint  CODEOWNERS  CONTRIBUTING.zh.md  CPPLINT.cfg  LICENSE  PYLINT.cfg  README.md  requirements.txt  setup.py
examples/libtorch_mlu/: CMakeLists.txt  README.md  inference_model.cpp  run.sh  trace_model.py
examples/libtorch_resnet/: CMakeLists.txt  README.md  build.sh  libtorch_resnet.cpp  resnet_trace.py  run.sh
torch_mlu/csrc/: CMakeLists.txt  stub.cpp
torch_mlu/csrc/api/include/torch_mlu/: torch_mlu.h
torch_mlu/csrc/aten/: CMakeLists.txt  DispatchStub.h  MLUFallback.cpp  MLUFallback.h  TensorIteratorBridge.cpp  TensorIteratorBridge.h  autocast_mode.cpp
torch_mlu/csrc/aten/cnnl/: cnnlAlgorithms.h  cnnlCommonDescriptors.cpp  cnnlCommonDescriptors.h  cnnlDescriptors.h  cnnlHandle.cpp  cnnlHandle.h  cnnlHeuristicResult.cpp  cnnlHeuristicResult.h  cnnlOpDescriptors.cpp  cnnlOpDescriptors.h  cnnlTensorDesc.cpp  cnnlTensorDesc.h  cnnlTensorDesc_internal.cpp  cnnlTensorDesc_internal.h  cnnlTensorDescriptors.cpp  cnnlTensorDescriptors.h
torch_mlu/csrc/aten/mluop/: mluopCommonDescriptors.h  mluopDescriptors.h  mluopHandle.cpp  mluopHandle.h  mluopTensorDescriptors.cpp  mluopTensorDescriptors.h  mluopUtils.cpp  mluopUtils.h
torch_mlu/csrc/aten/operators/bang/: amp_unscale.cpp  amp_update_scale.cpp  common_utils.h  dump.cpp  fused_adam.cpp  fused_l2_norm.cpp  fused_l2_norm_amp.cpp  fused_lamb.cpp  fused_lamb_amp.cpp  fused_sgd.cpp  torch_fused_adam.cpp  torch_fused_adamw.cpp  torch_fused_adamw_common_utils.h  torch_fused_sgd.cpp
torch_mlu/csrc/aten/operators/bang/internal/: amp_non_finite_and_unscale.h  amp_non_finite_and_unscale.mlu  amp_non_finite_and_unscale_internal.mlu  amp_update_scale_internal.mlu  bang_internal.h  block_info_container.h  common_util.h  dump_internal.mlu  fused_adam_internal.mlu  fused_l2_norm_internal.mlu  fused_lamb_amp_internal.mlu  fused_lamb_internal.mlu  fused_sgd_internal.mlu  fused_torch_adamw_internal.mlu  fused_torch_sgd_internal.mlu  load_and_store.h  memory_policy.h  multi_tensor_apply.h  three_stage_pipeline.h
torch_mlu/csrc/aten/operators/cnnl/: abs.cpp  activation.cpp  adaptive_pooling.cpp  add.cpp  addbmm.cpp  addcdiv.cpp  addcmul.cpp  addmm.cpp  addmm_sparse.cpp  addmv.cpp  addr.cpp  angle.cpp  arange.cpp  as_strided.cpp  autocast_rnn.cpp  baddbmm.cpp  bce.cpp  bce_with_logits.cpp  bernoulli.cpp  bincount.cpp  bitwise_operators.cpp  boxes_iou_bev.cpp  boxes_overlap_bev.cpp  cat.cpp  cdist.cpp  ceil.cpp  clamp.cpp  clone.cpp  cnnlOpParams.cpp  cnnlOpParams.h  coalesce.cpp  col2im.cpp  conj.cpp  constant_pad_nd.cpp  convolution.cpp  convolution.h  convolution_backward.cpp  convolution_forward.cpp  convolution_transpose_backward.cpp  convolution_transpose_forward.cpp  (+159 more)
torch_mlu/csrc/aten/operators/cnnl/internal/: FlashAttention_internal.cpp  abs_internal.cpp  activation_inertnal.cpp  adaptive_pooling_internal.cpp  addcdiv_internal.cpp  addcmul_internal.cpp  addmm_bias_internal.cpp  addmm_internal.cpp  addmm_sparse_internal.cpp  angle_internal.cpp  arange_internal.cpp  as_strided_backward_internal.cpp  attention_internal.cpp  baddbmm_internal.cpp  bce_internal.cpp  bce_with_logits_internal.cpp  bincount_internal.cpp  bitwise_op_internal.cpp  boxes_iou_bev_internal.cpp  cast_internal.cpp  (+148 more)
torch_mlu/csrc/aten/operators/cpu/: cpu_kernel.h  nms3D_cpu.cpp  pin_memory.cpp
torch_mlu/csrc/aten/operators/mluop/: boxes_iou_bev.cpp  fft.cpp  points_in_boxes_mlu.cpp  voxel_pooling.cpp
torch_mlu/csrc/aten/utils/: accumulate_type.h  binaryops_util.cpp  binaryops_util.h  cnnl_util.cpp  cnnl_util.h  dispatch.h  exceptions.h  foreach_check_utils.h  ignore_warning_handler.h  internal_util.cpp  internal_util.h  p2p_access.cpp  p2p_access.h  shape_util.cpp  shape_util.h  sleep.cpp  sleep.h  sleep.mlu  tensor_util.cpp  tensor_util.h  types.cpp  types.h  utils.h
torch_mlu/csrc/aten/viewchain/: contiguous.cpp
torch_mlu/csrc/framework/: CMakeLists.txt
torch_mlu/csrc/framework/core/: MLUEvent.cpp  MLUEvent.h  MLUStream.cpp  MLUStream.h  caching_allocator.cpp  caching_allocator.h  caching_allocator_config.cpp  caching_allocator_config.h  caching_event.cpp  caching_event.h  device.cpp  device.h  device_utils.h  guard_impl.cpp  guard_impl.h  memory_allocator.cpp  memory_allocator.h  memory_snapshot.cpp  memory_snapshot.h  mlu_guard.h  stream_guard.h  tensor_impl.h
torch_mlu/csrc/framework/distributed/: README.md  TraceUtils.h  Utils.h  cncl_utils.cpp  cncl_utils.h  init.cpp  init.h  process_group_cncl.cpp  process_group_cncl.hpp  reducer.cpp  reducer.h  reducer_mlu.cpp
torch_mlu/csrc/framework/fallback/: README.md
torch_mlu/csrc/framework/generator/: generator_impl.cpp  generator_impl.h
torch_mlu/csrc/framework/graphs/: MLUGraph.cpp  MLUGraph.h  MLUGraphUtils.h
torch_mlu/csrc/framework/hooks/: MLUHooks.cpp  MLUHooks.h  README.md
torch_mlu/csrc/framework/profiler/: cnpx_observer.cpp  mlu.cpp
torch_mlu/csrc/python/: Autocast.cpp  Autocast.h  Cnpx.cpp  Cnpx.h  Cnrt.cpp  Cnrt.h  Event.cpp  Event.h  Graph.cpp  Graph.h  MLUPluggableAllocator.cpp  MLUPluggableAllocator.h  MluIPCTypes.cpp  MluIPCTypes.h  Module.cpp  Module.h  ProcessGroupCNCL.cpp  ProcessGroupCNCL.h  PythonTensor.cpp  PythonTensor.h  Storage.cpp  Storage.h  StorageMethods.cpp  StorageMethods.h  StorageSharing.cpp  StorageSharing.h  Stream.cpp  Stream.h  THMP.h  combined_traceback.cpp  combined_traceback.h  python_variable_methods.cpp  python_variable_methods.h  serialization.cpp  serialization.h
torch_mlu/csrc/python/distributed/: init.cpp
torch_mlu/csrc/test/: CMakeLists.txt  main.cpp
torch_mlu/csrc/test/common/: test_caching_host_allocator.cpp  test_env_compatibility.cpp  test_guardimpl.cpp  test_mlu_caching_allocator.cpp  test_mlu_generator.cpp  test_mlu_sparse_fail_fallback.cpp  test_notifier.cpp  test_process_group_cncl_errors.cpp  test_queue.cpp  test_streamguard.cpp
torch_mlu/csrc/utils/: Export.h  assert_tensor.cpp  assert_tensor.h  cndumper.cpp  cndumper.h  cnlog.cpp  cnlog.h  common.cpp  common.h  version.h
(+907 files in other folders)
